# DEF-W9-03_Turing-Radar

./: .env.serve  ASSETS.md  CLAUDE.md  NEXT_STEPS.md  PIPELINE_MAP.md  PRD.md  README.md  TRAINING_REPORT.md  anima_module.yaml  pyproject.toml
assets/: hero.html
configs/: debug.toml  default.toml  paper.toml  train.toml
docker/: Dockerfile.cuda  Dockerfile.serve  docker-compose.serve.yml
docs/: ros2_contract.md
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
scripts/: benchmark_baseline.py  evaluate_embedding.py  export_model.py  hf_model_card.md  ship.sh
src/anima_turing_radar/: __init__.py  api.py  config.py  constants.py  embedding.py  evaluate.py  infer.py  io.py  model.py  preprocess.py  ros2_node.py  serve.py  train.py
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0104.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0301.md  PRD-0302.md  PRD-0401.md  PRD-0402.md  PRD-0501.md  PRD-0502.md  PRD-0601.md  PRD-0602.md  PRD-0701.md  PRD-0702.md
tests/: test_api.py  test_config.py  test_evaluate.py  test_infer.py  test_io.py  test_model.py  test_preprocess.py  test_train.py
