[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "anima-turing-radar"
version = "0.1.0"
description = "ANIMA defense module baseline for Turing Synthetic Radar deinterleaving"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AIFLOW LABS" }
]
dependencies = [
  "numpy>=1.26",
  "h5py>=3.10",
  "scikit-learn>=1.4",
  "pydantic>=2.6",
  "fastapi>=0.111",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
anima-turing-infer = "anima_turing_radar.infer:main"
anima-turing-api = "anima_turing_radar.api:run"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-ra"]
